--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -1,2 +1,2 @@
 sendgrid:
-    api_key: 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
+    api_key: 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
