chore: persistent volume for database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,9 @@ services:
       POSTGRES_HOST_AUTH_METHOD: trust 
     volumes:
       - unixsck:/var/run/
+      - db:/var/lib/postgresql/data/
 
 volumes:
   unixsck:
+  db:
 
