--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,9 @@
 
 /coverage
 
-/config/master.key
-/config/credentials/development.key
-/config/credentials/production.key
+#/config/master.key
+#/config/credentials/development.key
+#/config/credentials/production.key
 
 
-/config/credentials/test.key
+#/config/credentials/test.key
